sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:7: error: reassignment to val
             N=N-1}
              ^